# lab4AK

./: CMakeCache.txt  CMakeLists.txt  MyMakefile  build.ninja  calculator.cpp  calculator.h  cmake_install.cmake  main.cpp  rules.ninja
